component hierarchy + template HTML scaffolding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,20 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<nav>
-  nav bar
-</nav>
-
 <header>
-  header
+  
+  <div class="left">
+    <a>AnguLogo</a>
+    <a>Blog</a> <!-- just links to medium article? or create a new Blog component w/ route.... and then multiple medium articles could each be in a nice little display box / component -->
+  </div>
+
+  <div class="right">
+    <a>twitter</a>
+    <a>LinkedIn</a>
+    <a>GitHub</a>
+  </div>
+
 </header>
 
-<div>
-  app component html
-</div>
+<top-container></top-container>
+<demo-container></demo-container>
+<tutorial-container></tutorial-container>
+<team-container></team-container>
 
-<div>
-  oh papi
-</div>
-
-<div>
-  Angustretch
-</div>
-
-<div>
-  anguspread
-</div>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<router-outlet></router-outlet>
