basic boilerplate for website Co-authored-by: Mr. Snacks <singing-hippos@users.noreply.github.com> Co-authored-by: jdarmada <jdarmada@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   
   <div class="left">
     <a>AnguLogo</a>
@@ -13,8 +13,8 @@
 
 </header>
 
-<top-container></top-container>
-<demo-container></demo-container>
-<tutorial-container></tutorial-container>
-<team-container></team-container>
+<app-top-container></app-top-container>
+<app-demo-container></app-demo-container>
+<app-tutorial-container></app-tutorial-container>
+<app-team-container></app-team-container>
 
