--- a/src/app/demo-container/demo-item/demo-item.component.html
+++ b/src/app/demo-container/demo-item/demo-item.component.html
@@ -4,7 +4,7 @@
 <p>or we could just hard code in all the demo titles / gifs / text.....</p>
 <br>
 
-<flexbox style="border-color: purple;">
+<div style="border-color: purple;">
     <p>this is a flexbox...</p>
     <h2 class="demoTitle">what are we demo'ing in this one</h2>
     <iframe>I don't know how iframes work, but this is one... drop the gif in as one?</iframe>
@@ -15,7 +15,7 @@
         <li>want some</li>
         <li>list action?</li>
     </ul>
-</flexbox>
+</div>
 
 <br>
 <p>we may need a bit of dynamics here...</p>
