--- a/src/app/team-container/team-container.component.html
+++ b/src/app/team-container/team-container.component.html
@@ -2,8 +2,8 @@
 <p>should each box have their own id corresponding to our names?</p>
 <p>and.... are we gonna dynamically assign data to these, or should we hard code </p>
 <p>in the structure of what's currently a component, one time for each of us?</p>
-<team-member-box class="team"></team-member-box>
-<team-member-box class="team"></team-member-box>
-<team-member-box class="team"></team-member-box>
-<team-member-box class="team"></team-member-box>
-<team-member-box class="team"></team-member-box>
+<app-team-member-box class="team"></app-team-member-box>
+<app-team-member-box class="team"></app-team-member-box>
+<app-team-member-box class="team"></app-team-member-box>
+<app-team-member-box class="team"></app-team-member-box>
+<app-team-member-box class="team"></app-team-member-box>
