--- a/src/app/top-container/top-container.component.html
+++ b/src/app/top-container/top-container.component.html
@@ -5,6 +5,9 @@
         with a magnifying glass into the <br>
         inner workings of your code
     </h3>
+    <p>
+        testing
+    </p>
     <button id="vsCodeButton">Download VSCode Extension</button>
     <button id="gitHubButton">Check out our GitHub</button>
 </div>
