--- a/src/app/top-container/top-container.component.html
+++ b/src/app/top-container/top-container.component.html
@@ -6,7 +6,7 @@
         inner workings of your code
     </h3>
     <p>
-        testing
+        testing more
     </p>
     <button id="vsCodeButton">Download VSCode Extension</button>
     <button id="gitHubButton">Check out our GitHub</button>
