added descriptions and partial instructions

--- a/src/app/demo-container/demo-container.component.html
+++ b/src/app/demo-container/demo-container.component.html
@@ -1,7 +1,2 @@
 <h2 class="lesserTitle">How does it work?</h2>
-<app-demo-item class="demo" id="demo1"></app-demo-item>
-<app-demo-item class="demo" id="demo2"></app-demo-item>
-<app-demo-item class="demo" id="demo3"></app-demo-item>
-<app-demo-item class="demo" id="demo4"></app-demo-item>
-<app-demo-item class="demo" id="demo5"></app-demo-item>
-<app-demo-item class="demo" id="demo5"></app-demo-item>
+<app-demo-item class="demos"></app-demo-item>
