--- a/src/app/demo-container/demo-item/demo-item.component.html
+++ b/src/app/demo-container/demo-item/demo-item.component.html
@@ -1,5 +1,6 @@
 <div *ngFor = "let demo of demoItems">
     <h2 class="demoTitle">{{ demo.title }}</h2>
+    <h3 class ="demoDescription">{{ demo.description }}</h3>
 
     <div>{{ demo.gifContent}}</div>
 
