--- a/src/app/demo-container/demo-item/demo-item.component.html
+++ b/src/app/demo-container/demo-item/demo-item.component.html
@@ -2,7 +2,10 @@
     <h2 class="demoTitle">{{ demo.title }}</h2>
     <h3 class ="demoDescription">{{ demo.description }}</h3>
 
-    <div>{{ demo.gifContent}}</div>
+    <div *ngFor = "let gifUrl of demo.gifUrls">
+        <img src="gifUrl" alt="Demo Gif"/>
+
+    </div>
 
     <ul>
         <li *ngFor = "let item of demo.instructionsList">{{ item }}</li>
