--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,17 @@
-<p>navbar works!</p>
+<nav class="navbar">
+  <div class="leftside">
+    <a class="brand" href="http://localhost:4200">
+      <img class="angulensLogo" src="../../assets/Angulens_3.png">
+      <h1>AnguLens</h1>
+    </a>
+    <a href="https://medium.com/@staskus.scott/angular-through-a-better-lens-6c6ba8812f0c" target="_blank">Blog</a>
+  </div>
+  <div class="rightside">
+    <a href="https://www.linkedin.com/company/angulens" target="_blank">
+      <img class="linkedinLogo" src="../../assets/LinkedinLogo.png">
+    </a>
+    <a href="https://github.com/oslabs-beta/AnguLens" target="_blank">
+      <img class="githubLogo" src="../../assets/githubLogo.png">
+    </a>
+  </div>
+</nav>
