--- a/src/app/demo-container/demo-item/demo-item.component.scss
+++ b/src/app/demo-container/demo-item/demo-item.component.scss
@@ -1,7 +1,11 @@
 
+
+
+
 .demoGif{
   width: 800px;
-  border: 2px solid rgb(148, 1, 1);
+  border: 1px solid rgb(148, 1, 1);
+  border-radius: 10px;
 }
 
 .demoItemContainer {
@@ -10,5 +14,8 @@
   align-items: center;
   background-color: rgb(41, 41, 41);
   width: 60vw;
-  border: 5px solid red;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  padding-top: 30px;
+  color: white;
 }
