added styling and a navigation area

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,7 @@
 .navbar {
-  background-color: #f8f9fa;
-  padding: 1rem;
+  background-color: hsl(345, 100%, 37%);
+  padding-top: 10px;
+  padding-bottom: 5px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
