--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,16 +2,24 @@
   <div class="leftside">
     <a class="brand" href="http://localhost:4200">
       <img class="angulensLogo" src="../../assets/Angulens_3.png">
-      <h1>AnguLens</h1>
+      <h1 style="margin-bottom:0px">AnguLens</h1>
+
     </a>
-    <a href="https://medium.com/@staskus.scott/angular-through-a-better-lens-6c6ba8812f0c" target="_blank">Blog</a>
+  </div>
+  <div class="navigate">
+    <a>How Does It Work?</a>
+    <a>Tutorial Video</a>
+    <a>Meet The Team</a>
   </div>
   <div class="rightside">
-    <a href="https://www.linkedin.com/company/angulens" target="_blank">
-      <img class="linkedinLogo" src="../../assets/LinkedinLogo.png">
+    <a href="https://medium.com/@staskus.scott/angular-through-a-better-lens-6c6ba8812f0c" target="_blank">
+      <img class="mediumLogo" src="../../assets/MediumLogo.png">
     </a>
     <a href="https://github.com/oslabs-beta/AnguLens" target="_blank">
       <img class="githubLogo" src="../../assets/githubLogo.png">
+    </a>
+    <a href="https://www.linkedin.com/company/angulens" target="_blank">
+      <img class="linkedinLogo" src="../../assets/LinkedinLogo.png">
     </a>
   </div>
 </nav>
