--- a/src/app/demo-container/demo-item/demo-item.component.html
+++ b/src/app/demo-container/demo-item/demo-item.component.html
@@ -1,23 +1,24 @@
 
 
 
-    <div *ngFor = "let demo of demoItems">
-        <div class="demoItemContainer">
-
+<div *ngFor = "let demo of demoItems">
+    <div class="demoItemContainer">
+        <div class="titleContainer">
             <h2 class="demoTitle">{{ demo.title }}</h2>
-            <h3 class ="demoDescription">{{ demo.description }}</h3>
-            
-            <div *ngFor = "let gifUrl of demo.gifUrls">
-                <img class="demoGif" [src]="gifUrl" alt="Demo Gif"/>
-                
-            </div>
-
-            <div class="instructionsContainer">
-
-                <ul>
-                    <li *ngFor = "let item of demo.instructionsList">{{ item }}</li>
-                </ul>
-            </div>
         </div>
+        <h3 class ="demoDescription">{{ demo.description }}</h3>
         
+        <div *ngFor = "let gifUrl of demo.gifUrls">
+            <img class="demoGif" [src]="gifUrl" alt="Demo Gif"/>
+            
+        </div>
+
+        <div class="instructionsContainer">
+
+            <ul>
+                <li class="instructionsList" *ngFor = "let item of demo.instructionsList">{{ item }}</li>
+            </ul>
+        </div>
     </div>
+    
+</div>
