--- a/src/app/demo-container/demo-item/demo-item.component.scss
+++ b/src/app/demo-container/demo-item/demo-item.component.scss
@@ -12,13 +12,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(41, 41, 41);
-  width: 75vw;
+  background-color: rgb(65, 65, 65);
+  width: 60vw;
   border-radius: 15px;
   margin-bottom: 20px;
   padding-top: 50px;
   padding-bottom: 50px;
   color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 }
 
