added more styling to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="leftside">
     <a class="brand" href="http://localhost:4200">
       <img class="angulensLogo" src="../../assets/Angulens_3.png">
-      <h1 style="margin-bottom:0px">AnguLens</h1>
+      <h1 class="siteTitle" style="margin-bottom:0px">AnguLens</h1>
 
     </a>
   </div>
