--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,19 +7,18 @@
     </a>
   </div>
   <div class="navigate">
-    <a>How Does It Work?</a>
-    <a>Tutorial Video</a>
-    <a>Meet The Team</a>
+    <a class="navItem">How Does It Work?</a>
+    <a class="navItem">Meet The Team</a>
   </div>
   <div class="rightside">
     <a href="https://medium.com/@staskus.scott/angular-through-a-better-lens-6c6ba8812f0c" target="_blank">
-      <img class="mediumLogo" src="../../assets/MediumLogo.png">
+      <img class="Logo" src="../../assets/MediumLogo.png">
     </a>
     <a href="https://github.com/oslabs-beta/AnguLens" target="_blank">
-      <img class="githubLogo" src="../../assets/githubLogo.png">
+      <img class="Logo" src="../../assets/githubLogo.png">
     </a>
     <a href="https://www.linkedin.com/company/angulens" target="_blank">
-      <img class="linkedinLogo" src="../../assets/LinkedinLogo.png">
+      <img class="Logo" src="../../assets/LinkedinLogo.png">
     </a>
   </div>
 </nav>
