--- a/src/app/team-container/team-container.component.html
+++ b/src/app/team-container/team-container.component.html
@@ -1,4 +1,6 @@
-<h2 class="lesserTitle">Meet the team</h2>
-<div class="team-container">
-  <app-team-member-box class="team" *ngFor="let member of teamInfo" [member]="member"></app-team-member-box>
+<div class="meet-the-team">
+  <h1 class="lesserTitle">Meet The Team</h1>
+  <div class="team-container">
+    <app-team-member-box class="team" *ngFor="let member of teamInfo" [member]="member"></app-team-member-box>
+  </div>
 </div>
