finished top container

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: hsl(345, 100%, 37%);
+  background-color: hsl(345deg 100% 47%);
   width: 100vw;
   position: fixed;
   z-index: 1000;
@@ -13,7 +13,7 @@
 .leftside {
   display: flex;
   justify-content: center;
-  position: absolute;
+  
  
  
 }
