--- a/src/app/top-container/top-container.component.html
+++ b/src/app/top-container/top-container.component.html
@@ -1,10 +1,24 @@
- <div>
+<div class="topContainer">
     <h1 class="mainTitle">AnguLens</h1>
-    <h3>
+    <h3 class="mainDescription">
         The Angular project visualizer that arms you <br>
         with a magnifying glass into the <br>
         inner workings of your code
     </h3>
-    <button id="vsCodeButton">Download VSCode Extension</button>
-    <button id="gitHubButton">Check out our GitHub</button>
+    <div class="mainButtons">
+        <button class="button-82-pushable" role="button">
+            <span class="button-82-shadow"></span>
+            <span class="button-82-edge"></span>
+            <span class="button-82-front text">
+              Download Extension
+            </span>
+          </button>
+          <button class="button-82-pushable" role="button">
+            <span class="button-82-shadow"></span>
+            <span class="button-82-edge"></span>
+            <span class="button-82-front text">
+              Github
+            </span>
+          </button>
+    </div>
 </div>
