--- a/src/app/demo-container/demo-container.component.scss
+++ b/src/app/demo-container/demo-container.component.scss
@@ -3,3 +3,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.lesserTitle {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
+  margin-bottom: 30px;
+}
