added scroll navigation anchors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-navbar></app-navbar>
 <app-top-container></app-top-container>
-<app-demo-container></app-demo-container>
-<app-team-container></app-team-container>
+<div id="demo-container">
+  <app-demo-container></app-demo-container>
+</div>
+<div id="team-container">
+  <app-team-container></app-team-container>
+</div>
