--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,8 +7,8 @@
     </a>
   </div>
   <div class="navigate">
-    <a class="navItem">How Does It Work?</a>
-    <a class="navItem">Meet The Team</a>
+    <a class="navItem" href="#demo-container">How Does It Work?</a>
+    <a class="navItem" href="#team-container">Meet The Team</a>
   </div>
   <div class="rightside">
     <a href="https://medium.com/@staskus.scott/angular-through-a-better-lens-6c6ba8812f0c" target="_blank">
