--- a/src/app/top-container/top-container.component.html
+++ b/src/app/top-container/top-container.component.html
@@ -6,19 +6,25 @@
         inner workings of your code
     </h3>
     <div class="mainButtons">
-        <button class="button-82-pushable" role="button">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front text">
-              Download Extension
-            </span>
-          </button>
-          <button class="button-82-pushable" role="button">
-            <span class="button-82-shadow"></span>
-            <span class="button-82-edge"></span>
-            <span class="button-82-front text">
-              Github
-            </span>
-          </button>
+        <a href="https://marketplace.visualstudio.com/items?itemName=angulens.angulens" target="_blank">
+            
+            <button class="button-82-pushable" role="button">
+                <span class="button-82-shadow"></span>
+                <span class="button-82-edge"></span>
+                <span class="button-82-front text">
+                    Download Extension
+                </span>
+            </button>
+        </a>
+        <a href="https://github.com/oslabs-beta/AnguLens" target="_blank">
+
+            <button class="button-82-pushable" role="button">
+                <span class="button-82-shadow"></span>
+                <span class="button-82-edge"></span>
+                <span class="button-82-front text">
+                    Github
+                </span>
+            </button>
+        </a>
     </div>
 </div>
