--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -46,6 +46,7 @@ a {
   display: flex;
   justify-content: center;
   margin-right: 16px;
+  color: black;
   
   
 }
@@ -53,6 +54,7 @@ a {
 .navItem{
   margin-right: 8px;
   margin-left: 8px;
+  color: black;
 
 }
 
