made colors more consistent

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: hsl(345deg 100% 47%);
+  background-color: hsl(345, 99%, 38%);
   width: 100vw;
   position: fixed;
   z-index: 1000;
