--- a/src/app/top-container/top-container.component.scss
+++ b/src/app/top-container/top-container.component.scss
@@ -90,7 +90,7 @@
   border-radius: 12px;
   font-size: 1.1rem;
   color: white;
-  background: hsl(345deg 100% 47%);
+  background: hsl(345, 100%, 39%);
   will-change: transform;
   transform: translateY(-4px);
   transition:
