--- a/src/app/demo-container/demo-item/demo-item.component.scss
+++ b/src/app/demo-container/demo-item/demo-item.component.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(65, 65, 65);
+  background-color: #1f133c;
   width: 60vw;
   border-radius: 15px;
   margin-bottom: 20px;
