added correct link in navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="leftside">
-    <a class="brand" href="http://localhost:4200">
+    <a class="brand" href="http://www.angulens.com">
       <img class="angulensLogo" src="../../assets/Angulens_3.png">
       <h1 class="siteTitle" style="margin-bottom:0px">AnguLens</h1>
 
