--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -54,8 +54,30 @@ a {
 .navItem{
   margin-right: 8px;
   margin-left: 8px;
+  font-size: 14px;
   color: black;
+  transition: all 2s ease-in-out;
+  display: inline-block;
+  position: relative;
 
+}
+.navItem::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  height: 2px;
+  width: 0;
+  right: 0;
+  background-color: #320d03;
+  transition: all 300ms ease;
+}
+.navItem::after {
+  background-color: #320d03;
+}
+
+.navItem:hover::after {
+  left: 0;
+  width: 100%;
 }
 
 .rightside {
