--- a/src/app/top-container/top-container.component.html
+++ b/src/app/top-container/top-container.component.html
@@ -5,6 +5,7 @@
         with a magnifying glass into the <br>
         inner workings of your code
     </h3>
+    <h3 class="subtitle">User-friendly VSCode extension</h3>
     <div class="mainButtons">
         <a href="https://marketplace.visualstudio.com/items?itemName=angulens.angulens" target="_blank">
             
