--- a/src/app/top-container/top-container.component.scss
+++ b/src/app/top-container/top-container.component.scss
@@ -17,7 +17,7 @@
   font-weight: bold;
   padding-bottom: 32px;
   color: #FFFFFF;
-  
+  border-bottom: 2px solid rgb(133, 131, 131);
 }
 
 .mainDescription{
@@ -139,4 +139,31 @@
 
 .button-82-pushable:focus:not(:focus-visible) {
   outline: none;
+}
+
+.subtitle{
+  padding-bottom: 16px;
+  color: rgb(228, 228, 227);
+}
+
+@media only screen and (max-width: 600px) {
+  .mainTitle{
+    font-size: 60px;
+  }
+  .mainDescription{
+    font-size: 25px;
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+  .mainButtons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+
+  .button-82-pushable{
+    margin-bottom: 20px;
+  
+  }
 }
